# Emscripten-CMake-Libraries-Minimal

./: CMakeLists.txt  LICENSE  README.md  index.html
.github/workflows/: build-emscripten.yml  build-native.yml
app/: CMakeLists.txt  main.cpp
commonlib/: CMakeLists.txt  IAbstractInterface.cpp  IAbstractInterface.h  commonlib.cpp  commonlib.h
emscriptenbindings/: CMakeLists.txt  bindings.cpp
liba/: CMakeLists.txt  ConcreteInterfaceImplementation.cpp  ConcreteInterfaceImplementation.h  liba.cpp  liba.h
libb/: CMakeLists.txt  libb.cpp  libb.h
